--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
+    "react-input-autosize": "^2.2.2",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
