--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.12.0",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
+    "react-fade-in": "^0.1.6",
     "react-input-autosize": "^2.2.2",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
