--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "framer-motion": "^1.6.17",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
@@ -14,6 +15,7 @@
     "react-fade-in": "^0.1.6",
     "react-input-autosize": "^2.2.2",
     "react-loader-spinner": "^3.1.5",
+    "react-pose": "^4.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
