--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-fade-in": "^0.1.6",
     "react-input-autosize": "^2.2.2",
     "react-loader-spinner": "^3.1.5",
+    "react-modal-video": "^1.2.3",
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.19.1"
   }
 }
